students/Shuvalov_Sergey_Yuryevich/task_02/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web28
  labels:
    org.bstu.owner: "GrafShu"
    org.bstu.student.slug: "feis-576-220253-v28"
