students/Shuvalov_Sergey_Yuryevich/task_02/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: web28
  labels:
    org.bstu.owner: "GrafShu"
    org.bstu.student.slug: "feis-576-220253-v28"
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: web28
  labels:
    app: postgres
    org.bstu.owner: "GrafShu"
    org.bstu.student.slug: "feis-576-220253-v28"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
